--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_fonts: ^1.1.2
+  build_runner: ^1.11.1
+  dio: ^3.0.10
   font_awesome_flutter: ^8.11.0
+  google_fonts: ^1.1.2
+  json_serializable: ^3.5.1
+  provider: ^4.0.4
+  rxdart: ^0.24.0
 
 
   # The following adds the Cupertino Icons font to your application.
