--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,11 @@ dependencies:
   build_runner: ^1.11.1
   dio: ^3.0.10
   font_awesome_flutter: ^8.11.0
+  gallery_saver: ^2.0.3
   google_fonts: ^1.1.2
   json_serializable: ^3.5.1
+  open_file: ^3.0.3
+  path_provider: ^1.6.27
   provider: ^4.0.4
   rxdart: ^0.24.0
 
